updated at: 2023-07-31 21:50, おふとん.fbx - ぽぴぞん - BOOTH

--- a/VRChat/21/962721.html
+++ b/VRChat/21/962721.html
@@ -104,7 +104,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "uKlIPQp1mgDxe1mt8mf1geyTrmsddmAC3wl3qiztoJs="></script>
+    "RQ0gl3o0Jfq+hE/+yQ5IkOnWreEA9XSj3hgnLAB7IqQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"おふとん.fbx","description":"VRCでのAFKアバターとしての利用を想定した、400ポリゴンほどのおふとんです。\nクオリティはあまり期待しないでください。\nマテリアルで自由に色を変更することが出来ます。\n\n看板部分のテクスチャを同梱しておりますので、編集してお好きな内容を表示することが出来ますし、看板を削除してもかまいません。\n\n【利用方法】\n①Blender上で、お使いの3DモデルにおふとんのFBXファイルをインポートして、位置、大きさを調整\n②ポーズモードにて、モデルを寝姿に変更し、FBXエクスポート\n③Unityにインポートし、シーン上でモデルの顔のメッシュを選択。シェイプキーで寝てるっぽい表情にします\n④ジェネリックアバターとしてアップロード\n\n【利用規約】\n特にありません。ご自由に利用なさってください。","url":"https://booth.pm/ja/items/962721","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/13e72562-5481-4676-9ce5-6a97e2f60d62/i/962721/01dc65e2-bf78-45ce-aa55-fa497ee2401f_base_resized.jpg"}
     </script>
@@ -115,7 +115,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="uKlIPQp1mgDxe1mt8mf1geyTrmsddmAC3wl3qiztoJs="></script>
+    nonce="RQ0gl3o0Jfq+hE/+yQ5IkOnWreEA9XSj3hgnLAB7IqQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -367,9 +367,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
