--- a/VRChat/31/962631.html
+++ b/VRChat/31/962631.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "4V6J6tfrdPzJVgYK/ZRki/jOyf+q0WQ/yvsI90vmDS4="></script>
+    "L7BsHiNLvTBUO9tQfTSvWFT+kxv8G4oGjZ/UPTVVC5o="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"まぐろ.FBX","description":"・モデル改造、テクスチャ改変等が可能なマグロモデルです。\n・驚異の422ポリゴン。\n・第三者の収益化動画や配信などに映り込む際の制限などはありません。\n・FBXファイルとテクスチャファイル、UnityPackageにはマテリアルを設定したマグロモデルとVRChatSDKがインポートされた\nプロジェクトファイルにインポートするとそのままアップロード可能状態なセットアッププレハブ付き。\n\n【免責事項 Disclaimer】\n\n・本データの利用において、何らかの不都合が生じたとしても当方は責任を負いかねますのでご了承ください。\n・条件についての内容は予告なく変更する場合があります。\n\n-Take full responsibility for your actions.\n-Follow  the most recent rules.\n\n【使用条件 Rules】\n\n・本データの改造利用には制限を設けませんが、データの再配布は禁止とします。\n　ゲーム等の用途としてデータが梱包されるのは問題ありません。\n・商用利用も問題ありません。\n\n-You can modify this data.(Do not redistribute this data.)\n\n\n・UnityのHumanoid規格にセットアップしてありますが、利用プラットフォームの制限はありません。\n　（VRアバター、VTuber、ゲーム利用等）\n・第三者の収益動画・配信等に映り込むことも問題ありません。\n\n-You can use this in any platform.(This data has been set up for Unity.)\n\n\n【内容物 Contents】\n\n・VR_Tuna.fbx\nFBXファイル版モデルデータです。\n口パク用シェイプキーが入っています。\n\n\n・Maguro.png\nマグロテクスチャです。\n\n\n・MaguroNormal.png\nマグロ簡易ノーマルマップです。\nUnityで利用する際はマテリアルへ適用後、Unityへ最適化するボタンが出る場合があるので押してください。\n\n・Maguro.unitypackage\nVRChatのSDKがインポートされたUnityプロジェクトにインポートすると、そのままアバターとして使用できる状態にセットアップしたパッケージです。\n「TunaHuman」のプレハブがアバターセットアップ済みファイルなのでそれをHierarchyへ投入してください。\nマグロが泳ぐアニメーションも同梱しています。\n\n\n\n【連絡先 Contact】\n何か連絡事項がありましたら。\n\nTwitter : サンフィッシュくまの(@megakumadori)\nhttps://twitter.com/megakumadori\n\nまでリプライかDMをお願いします。\n\n\n(2018 8/12)配布開始\n","url":"https://booth.pm/ja/items/962631","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/4cfe502f-f7f0-4110-8040-11bd7e240c28/i/962631/0e4b0c17-0098-4c90-ab4b-88e8cbee9e65_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="4V6J6tfrdPzJVgYK/ZRki/jOyf+q0WQ/yvsI90vmDS4="></script>
+    nonce="L7BsHiNLvTBUO9tQfTSvWFT+kxv8G4oGjZ/UPTVVC5o="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -416,9 +416,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
