--- a/VRChat/82/961982.html
+++ b/VRChat/82/961982.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "xa2P9EwOcuIHASTT/GjoMf9qYBZ75yBlsnArxW0UYlw="></script>
+    "6h+9Sffy7SFbbnq3nXR474gxZ6+017C8jyYRZC5JcjY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【YK's Atelier】ルーンストーン、ルーン文字 全34種","description":"ゲルマン共通ルーン文字を元に作成したルーンストーン、ルーン文字です。\nルーンストーンの文字部分は凹ませております。\n\nルーン文字を利用してのパーティクル制作も想定しております。\n\nルーンストーン、ルーン文字ともに、占いとしてもご活用いただけます。\nVRChatでの占い動画（収益化済み）としてもご利用可能です。\n\n\n色の変更は可能です。ご自分のお好きな色にカスタムしてください。\nテクスチャはPSDファイルで保存されております。\n\n主にVRChatでの利用を想定しておりますが、他用途での利用も可能です。\n\n内容物：ルーンストーンxx.fbx\n　　　　ルーンストーン.psd\n　　　　ルーン文字xx.fbx\n  xx＝01～34\n\n▲モデルポリゴン数\n　モデル数が多いため、最大ポリゴン数のみ表示させていただきます。\nルーンストーン　最大　266ポリゴン\nルーン文字　　　最大　32ポリゴン\n\n\nマテリアル：各1つ\n\n禁止事項：再配布、転売、自作発言","url":"https://booth.pm/ja/items/961982","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/20fcfc8e-a688-49a2-95b4-807f9553d59d/i/961982/2cfc9d3d-50b3-4066-8935-9af31ce686c0_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="xa2P9EwOcuIHASTT/GjoMf9qYBZ75yBlsnArxW0UYlw="></script>
+    nonce="6h+9Sffy7SFbbnq3nXR474gxZ6+017C8jyYRZC5JcjY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -433,9 +433,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
