--- a/VRChat/00/961300.html
+++ b/VRChat/00/961300.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "a3Z21sIyfOsChwJYmSDXlp4mcVJcwSyiOWLmDn13PXg="></script>
+    "PrB2AUUSXENfJpGcTO5AaLGeWjUSYi5cOWGhS+zL38E="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat向け】水風船　944ポリゴン","description":"VRChat内での利用を想定した水風船の3Dモデルです。ご自由にご利用下さい。\n\nポリゴン数944\n.fbxのモデルデータ、デフォルトのテクスチャ、改変用のUVテクスチャが入っています。\n\nボーンが入っているため、ダイナミックボーンなどで揺らすことができます。\n\n無料配布とお金を払いたい方向けの2種類がありますが、内容に違いはありません。\n\nその他質問や確認は製作者Twitter（＠Sesqui_VR）までご連絡ください。","url":"https://booth.pm/ja/items/961300","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/64582e23-a174-480f-b05b-2d9908644c7b/i/961300/70e5b761-ee0e-4e34-9dc3-cd2fcbb75d93_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="a3Z21sIyfOsChwJYmSDXlp4mcVJcwSyiOWLmDn13PXg="></script>
+    nonce="PrB2AUUSXENfJpGcTO5AaLGeWjUSYi5cOWGhS+zL38E="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -428,9 +428,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
