--- a/VRChat/32/958932.html
+++ b/VRChat/32/958932.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "IAzIf2L48IDfDfNaXHy5ljJoNnuiYelyxT0dooNu+ZQ="></script>
+    "GzF3Mxgp4nA+P0DTM2PlItzOCl49LKacRizWHR1SpgY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"nanoputian(なのぷしゃん)","description":"2003年に発表された雑誌J. Org. Chemにて発表された原子の世界の小人なのぷしゃんの二次創作モデルです。\n無改変再配布以外禁止しませんので好きにしてください。\n帽子をかぶせたりテクスチャを書き換えたりして、君だけのオリジナルなのぷしゃんをつくっちゃおう！\n詳しくは利用規約をご覧ください。\n\n※本モデルの配布は事前の予告なく終了する場合がございます。（特に学会に怒られた場合は即座に終了します）\n\n引用:(James M. Tour,Stephanie H. Chanteaunanoptian J. Org. Chem. 2003, 68, 8750)\n\n内容\n・モデルデータ（.fbx)\n・blenderデータ(.blend)\n・テクスチャ(.png)\n・利用規約(.txt)","url":"https://booth.pm/ja/items/958932","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/29d3fb48-b17c-40f3-9f9a-dea621d4a8d0/i/958932/38089b81-12e4-4ac9-bb6d-acde0559438c_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="IAzIf2L48IDfDfNaXHy5ljJoNnuiYelyxT0dooNu+ZQ="></script>
+    nonce="GzF3Mxgp4nA+P0DTM2PlItzOCl49LKacRizWHR1SpgY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -375,9 +375,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
