--- a/VRChat/79/958479.html
+++ b/VRChat/79/958479.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "JbkB+d9QLMVmHEhH8NkRuCzOkPeUTh/8M3KzshIDpGo="></script>
+    "69cZ3ERVMjN1s3PleMiSmdmFGJNylaCpj7Er4hy0+K8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRchat想定】MCF 金塊","description":"ポリゴン数：32\nテクスチャサイズ：1024\n再配布禁止\n\n皆も昔あこがれただろ？連邦準備銀行にあるようなでかい金塊にさ。僕は憧れが強くてこの歳になって金塊ジェンガ（プラスチック製）なんて買っちゃったよ。割と満足してた。でもVRを始めてから思ったんだ。どうせならもっとデカいのがほしいって。だからVR錬金術で作ったんだ。さあ持っていけ！\n\n追記\nごめんモデル入ってなかった。今度こそ金塊だ。虚無じゃないぞ。ごめんね！","url":"https://booth.pm/ja/items/958479","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/41721053-8f32-4b87-9b48-5fda7552cf1a/i/958479/2826e47e-247f-470f-b500-d04fa7e71ec9_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="JbkB+d9QLMVmHEhH8NkRuCzOkPeUTh/8M3KzshIDpGo="></script>
+    nonce="69cZ3ERVMjN1s3PleMiSmdmFGJNylaCpj7Er4hy0+K8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -425,9 +425,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
