--- a/VRChat/59/958259.html
+++ b/VRChat/59/958259.html
@@ -76,7 +76,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "MdqpqiFAVQZXwYrVZTevA22/OJFQ2i4bMlLgnsO1jTc="></script>
+    "jcsgQKZ/13Yja1c2wB2kMZncTIkSpYDWl4MX+GBwKzs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"めだますけ","description":"初めて作ったモデルです","url":"https://booth.pm/ja/items/958259","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/e665438e-37aa-4bfb-bfa9-4a3e025e6113/i/958259/1b848770-4ce3-4c10-9b39-79b4719b5d05_base_resized.jpg"}
     </script>
@@ -90,7 +90,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="MdqpqiFAVQZXwYrVZTevA22/OJFQ2i4bMlLgnsO1jTc="></script>
+    nonce="jcsgQKZ/13Yja1c2wB2kMZncTIkSpYDWl4MX+GBwKzs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -330,9 +330,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
