updated at: 2023-07-31 21:53, Fireworks Pack For VRChat（ver 1.1） - 海洋温泉 鯨水荘 - BOOTH

--- a/VRChat/82/957082.html
+++ b/VRChat/82/957082.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "F5k+bdOgGH52YOnaEerMPksQUxxeb7kqlsNA7cNeLqU="></script>
+    "Vune2FqEKhIiM/h7aViMpS52iHn7pJYimgT3uhFhDJE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Fireworks Pack For VRChat（ver 1.1）","description":"※※※VRChat及びUnityの更新によって2019年9月以降の動作保証はできかねますので予めご了承ください。※※※\n※※※NOT guaranteed to work after September 2019.※※※\n\n【使用実績】\n2018/8/31 輝夜 月 LIVE@Zepp VR\nhttps://cluster.mu/events/27e9f6c6-2dd9-4d3f-9360-f37d5dc347ac\n演出として使用いただきました！\n\n\nVRChat向け打ち上げ花火2種類パックになっております。\n\n■複数パターン（現時点では5種類、アプデで追加予定）の乱れ打ち花火\n\n■好きな絵柄にカスタマイズ可能なオリジナル打ち上げ花火キット\n\n\nアバター用の小道具を想定していますが、ワールドなど他の用途に使っていただいても問題ありません。改変も可能です。\nたくさん打ち上げて夏を盛り上げていきましょう。\n\n\n\n※最低限Unityの基本的な操作ができる前提の造りとなっております。\n※音声はパッケージ内に含まれておりませんのでご注意ください。\nご不明な点がございましたらお気軽にご連絡ください。\n\n---\n【利用規約】\n・商用/非商用問わずご利用いただけます。\n\n・本パッケージの再配布は禁止です。\n\n・本パッケージの利用によって何らかのトラブル、損失等発生した場合でも当方は一切の責任を置いかねます。\n\n------------------------------------------\n1.1\n・ランダム花火のカラーバリエーションを追加\n\n-----\n\n1.0.5\n・一部の環境で絵柄花火が見えなかった問題を修正\n\n-----\n\n1.0.4\n・一部花火の打ち上げ頻度が高すぎたのを調整\n\n-----\n1.0.3 \n・花火のサイズ、打ち上げ位置を調整できるよう変更\n・マズルエフェクトのスケーリング調整\n・リリースログ、Q\u0026Aの追加\n\n-----\n1.0.2\n・コライダー関連機能を修正\n\n-----\n1.0.1初期リリース\n","url":"https://booth.pm/ja/items/957082","offers":{"priceCurrency":"JPY","@type":"Offer","price":"800"},"image":"https://booth.pximg.net/c/620x620/0488ecd2-1250-4bf4-8fe0-423ffeffe963/i/957082/eb504a5d-7c8c-440c-a6c6-591f16f3960a_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="F5k+bdOgGH52YOnaEerMPksQUxxeb7kqlsNA7cNeLqU="></script>
+    nonce="Vune2FqEKhIiM/h7aViMpS52iHn7pJYimgT3uhFhDJE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -192,7 +192,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      312
+                                      313
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -208,7 +208,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      312
+                                      313
                                     </div>
                                   </div></a>
                                 </div>
@@ -475,9 +475,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
