updated at: 2023-07-31 21:54, オリジナル３Dモデル「ヴァイス」 - ともえすとあ - BOOTH

--- a/VRChat/47/953747.html
+++ b/VRChat/47/953747.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "dCrm/f6EXhZg9sgqnxJ1gEjERK7fzLk60R9W8gQG7/Y="></script>
+    "KCtPm3Xz/C+O0HBBCAm+Q0+0GxwS6C3Jc+LCxvkwXFY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル３Dモデル「ヴァイス」","description":"/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/\n2018/10/08　Weiss1008.zip\nまばたきの設定を更新し、ユニティちゃんシェーダーを更新しました\nまた、シェイプキーをいくつか追加いたしました\n\n\n2018/08/20　Weiss0819.zip\nVRChat用のセットアップに対応しました\nDynamicBone、リップシンク設定済みです\nVRChat中は、デスクトップならShift+F3～F8で表情が変えられます\n\n/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/\n\n\nUnityゲームの習作として作成したキャラクターです。名前は”ヴァイス”です。ユニティちゃんトゥーンシェーダーを使わせていただきました。\n\nアーマーは、Unity上で非表示にもできるようにしてあります。好きな外観にしてお楽しみください。\n\n髪は前髪までスキニングしてあります。頑張りましたので、ボーン設定次第できれいに揺れると思います。\n※髪のウェイト修正しました（2018/08/07）\n※DynamicBone設定しました（2018/08/20）\n\nまた、表情用のモーフも左右違い含めて、40種類ほど作成してあります。いろいろな表情が作れるかと思いますので、遊んでみてください。\n\n最後に、おまけとしてレイヤー結合前のPSDも同梱してあります。特別な処理はしておりませんが、興味がある方の参考になれば幸いです。\n\n","url":"https://booth.pm/ja/items/953747","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/b5fe0720-4746-4c9c-9ca5-154c397d8bd5/i/953747/aac263ea-5e17-442b-8a4f-4a1c1fccc02c_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="dCrm/f6EXhZg9sgqnxJ1gEjERK7fzLk60R9W8gQG7/Y="></script>
+    nonce="KCtPm3Xz/C+O0HBBCAm+Q0+0GxwS6C3Jc+LCxvkwXFY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -471,9 +471,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
