updated at: 2023-07-31 21:54, 【VRCHAT用】和傘（開閉可能）【デスクトップ用アニメーション有り】 - ゆぬ店 - BOOTH

--- a/VRChat/38/953538.html
+++ b/VRChat/38/953538.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "NLZ0j1o4snWTem2cBSY1db21OquTEB0Mwk94ViJoHWA="></script>
+    "DToLZt7wQcRU7zl0+kGU9BdcxZNfdVgYYF7xbam2bZk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRCHAT用】和傘（開閉可能）【デスクトップ用アニメーション有り】","description":"VRChat用アクセサリー\n・内容\n和傘のfbxファイルに、テクスチャが入っています。\n片面メッシュのためマテリアルは両面描写するものをお使いください。\n回転用のanimファイルも付属しています。追加すると手に持ってる状態で回転します。\nprefabは通常のもの、発光するものがついています。\n※発光にはUnityChanToonShaderVer2_EmissiveScroll(https://github.com/tomori-hikage/UnityChanToonShaderVer2_EmissiveScroll)を使用しています。\nプロジェクトに追加してお使いください。\n\nデスクトップモード用のアニメーションも付属しています。\n傘を手に持たせた状態で設定してください。\n\n・仕様\n和傘：904ポリゴン\n　開閉用シェイプキー付き\nテクスチャ：５種＋発光用3種\n\n\n可：改変、商用利用\n　VRCHAT内での利用、アバターペダステルやワールドの素材として使用可です。\n不可：二次配布・本データを含めた販売、作者詐称\n\n2018/08/11 ver1.01\n テクスチャー３種追加しました。\n2018/09/02 ver1.02\n テクスチャー１種追加しました。\n2018/09/03 ver1.03\n デスクトップ用のアニメーション(idle,歩行)追加しました。\n prefabを修正しました。","url":"https://booth.pm/ja/items/953538","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/0adee944-20a4-4964-9f9d-2490cbfecd89/i/953538/00e14755-59d7-4749-a8a1-662e5ccf135c_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="NLZ0j1o4snWTem2cBSY1db21OquTEB0Mwk94ViJoHWA="></script>
+    nonce="DToLZt7wQcRU7zl0+kGU9BdcxZNfdVgYYF7xbam2bZk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -530,9 +530,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
