updated at: 2023-07-31 21:57, [VRChat向け]ゴールドベリーちゃん - 芭菜子のお店 - BOOTH

--- a/VRChat/99/949799.html
+++ b/VRChat/99/949799.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "1dfiW7KK1pow27kFykJCCpRzApRx+MR5LfAiu6l8CKc="></script>
+    "iJ/dvJbkzMzb7IEmCaHZuY72o9qLaNDP9lrkIgFGKAk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[VRChat向け]ゴールドベリーちゃん","description":"※VRCSDK3.0以前のSDKで作成していますのでSDK2を使うと良いです\n※↑通常衣装のPC版のみSDK３用を作成しました\n\n制作　oga\n twitter @oga_pleconia\n\nVRChatでの使用を想定したアバターモデルです\n必要なアセット（シェーダー、ダイナミックボーン、VRCSDK）をインポートするだけで\n揺れや表情付けがある程度調整されたアバターをアップロードすることができます\n\n\n---------------------------\nデータ内容\n\n◆G_Berry_MMS.unitypackage\nまんまるしぇーだー（みに@Mini_9321_VRさん作）同梱のパッケージ\n\n◆G_Berry_Cubed.unitypackage\nキューブドシェーダー用のパッケージ\n\n◆G_Berry_UTS2.unitypackage\nユニティちゃんトゥーンシェーダー2.0用パッケージ\n\n◆sozaiフォルダ\n元のfbxやテクスチャの素材などが入っています\n\n\n---------------------------\n仕様\n\nhumanoid対応ボーン\n表情切替はシェイプとオブジェクトで行う想定。顔周りのジョイント無し\n\n\n---------------------------\n・許可事項\n本データおよび本データの改変物を動画や画像、ゲームに使用することを許可、それらの商用も許可\nVR、UNITY関係以外でもOK。クレジットは不要です\n\n\n・制限事項\n本データおよび本データの改変物を配布・販売することは禁止\n（vrchatのアバターペデスタルのようなローカルにダウンロード出来ない形であれば許可）\n（ゲームに含めることはOK。データ自体を取り出せる配布がダメ）\n↑って最初書いてたけど別にいいよ☆","url":"https://booth.pm/ja/items/949799","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"150"},"image":"https://booth.pximg.net/c/620x620/58ea32ec-ba52-48e9-8014-360fbbd7a39a/i/949799/ad2ba75a-710b-4a86-bf2b-427e67678556_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="1dfiW7KK1pow27kFykJCCpRzApRx+MR5LfAiu6l8CKc="></script>
+    nonce="iJ/dvJbkzMzb7IEmCaHZuY72o9qLaNDP9lrkIgFGKAk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -619,9 +619,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
