updated at: 2023-07-31 22:07, VRchat/MMD/他使用可　クレープ - 紫がいこつ - BOOTH

--- a/VRChat/61/938561.html
+++ b/VRChat/61/938561.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "q0AW3DjTuRVHTKpFLeD7K+0S4noRyfoyeZWzgYobY0o="></script>
+    "RtgI7OdqfFlZiGA/2xm+eOycaxg4mSTouh5TF/q86dQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRchat/MMD/他使用可　クレープ","description":"三角面数3603\n\n主にVRchatでの使用を想定しています。\nMMDでの使用の場合はFBXファイルをblenderで読み込みMMDファイルへの変換が必要です。\n\n著作権は作者であるtoshiziが保有しています。\n\n\n【内容物】\n・3Dデータ（FBX形式）\n・テクスチャ（PNG形式）\n・サンプル画像\n・readme.txt\n\n\n【免責事項】\n・当データを使用することで何らかのトラブル・損失及び損害等が生じた場合、\n　それがいかなるものであっても制作者および配布元は一切責任を負いません。\n\n\n【許可事項】\n・VRchat以外での使用\n・モデルデータ・テクスチャの改変\n・商用利用（要クレジット記載）\n・動画（Vtuber活動、収益化済み含む）・静止画\n\n\n【禁止事項】\n・再配布・再販売\n・作者詐称\n\n\n以下は必須ではありませんが、していただけるとありがたいです\n・動画等、コンテンツ作成時の使用報告\n\n\nなにかあればこちらまで\nhttps://twitter.com/toshizi_hone","url":"https://booth.pm/ja/items/938561","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/b4d32ad4-2d90-4f9a-b2c6-95372fd3bff8/i/938561/ff912870-5729-48f8-ab45-7b4f1eaf989f_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="q0AW3DjTuRVHTKpFLeD7K+0S4noRyfoyeZWzgYobY0o="></script>
+    nonce="RtgI7OdqfFlZiGA/2xm+eOycaxg4mSTouh5TF/q86dQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -384,9 +384,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
