updated at: 2023-07-31 22:09, [VRChat向け]Dボーン式ライトセーバーキット - 芭菜子のお店 - BOOTH

--- a/VRChat/89/933789.html
+++ b/VRChat/89/933789.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "7w2l9FEoVnydn+qwRHedCB+bEHYpyvhRrAY5KmCBr74="></script>
+    "JpDkXVB1ZeNCqI5JN7xWcFi5WR9U2aRMQ8PSuIu92CY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[VRChat向け]Dボーン式ライトセーバーキット","description":"☆[VRChat向け]Dボーン式ライトセーバーキット☆\n\n制作　oga\n twitter @oga_pleconia\n\nダイナミックボーンを使用してブラーを出すタイプのビーム剣です\n※有償アセット「ダイナミックボーン」を予めご用意ください\n（無い場合も動かない形での実装は可能）\n\nグリップと刀身を分離したデータも用意しており、\nお好きなモデルにビーム刃を装着できます\n\n\n・データ内容\nfbx2018形式（unity5.6へのインポート確認済）\nmaya ascii形式（2018.2）\nテクスチャtga(サンプルグリップに使用のキューブマップのみ)\n使用方法解説メモ\n\n・仕様\nサンプルグリップのポリゴン数792\n刀身部分のポリゴン数624\nジョイント43本\n\n\n・許可事項\n本データおよび本データの改変物を動画や画像、ゲームに使用することを許可、それらの商用も許可\nVR、UNITY関係以外でもOK。クレジットは不要です\n\n\n・制限事項\n本データおよび本データの改変物を配布・販売することは禁止\n（vrchatのアバターペデスタルのようなローカルにダウンロード出来ない形であれば許可）\n（ゲームに含めることはOK。データ自体を取り出せる配布がダメ）","url":"https://booth.pm/ja/items/933789","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/58ea32ec-ba52-48e9-8014-360fbbd7a39a/i/933789/b658a6a0-f675-413a-bed5-460a7fa7e88e_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="7w2l9FEoVnydn+qwRHedCB+bEHYpyvhRrAY5KmCBr74="></script>
+    nonce="JpDkXVB1ZeNCqI5JN7xWcFi5WR9U2aRMQ8PSuIu92CY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -351,9 +351,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
