updated at: 2023-07-31 22:11, 『カフェ野ゾンビ子』未公開シーン集Season4 - カフェ野ゾンビ子公式ショップ - BOOTH

--- a/VRChat/27/931527.html
+++ b/VRChat/27/931527.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "WXKQsIprCnh2aRZQN/TY7vlcLf9Yxw5x9CLXR+O11HU="></script>
+    "4pT1G1VFGTvhLKAQlFNUrdI2/4Z7ddDqWaHp1iUZfaI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"『カフェ野ゾンビ子』未公開シーン集Season4","description":"バーチャルYoutuber『カフェ野ゾンビ子』の未公開シーン集Season4。放送に収めきれなかったヤバイシーンの詰め合わせです。（全18分）\n【EP27から】泣く泣くかっとしたしっとり歌った版のルージュの伝言\n【EP27から】ナオミを轢く瞬間をとらえた衝撃映像\n【EP28から】芝居臭かったのでカットした「ゾンビになってるんですけど」３連発\n【EP29から】踊りの練習をするも笑いまくってどうにもならないゾンビ子\n【EP30から】VRChatで他の人に初遭遇するゾンビ子（ノーカット版）\n【EP30から】湖から出られないゾンビ子（ノーカット版）\n【EP31から】日本人顔のアバターが爆発する瞬間をちょうど見逃すゾンビ子\n【EP34から】グロ過ぎる慣れ果てゾンビ子を並べる作業（ノーカット版）\n【EP35から】ナオミを動かす練習をするゾンビ子\n【EP35から】ナオミをカウンターに立たせて喜ぶゾンビ子\n【EP35から】ナオミを守る決意をするゾンビ子\n【EP36から】ナオミを完全防備するゾンビ子\n【最後にゾンビ子からコメント】","url":"https://booth.pm/ja/items/931527","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/734e11cf-5c50-4316-a4ec-afbde6cd103a/i/931527/d19612ed-0079-4e2a-ad1b-43971221a0da_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="WXKQsIprCnh2aRZQN/TY7vlcLf9Yxw5x9CLXR+O11HU="></script>
+    nonce="4pT1G1VFGTvhLKAQlFNUrdI2/4Z7ddDqWaHp1iUZfaI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -504,9 +504,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
