updated at: 2023-07-31 22:11, ３Dモデル：鳥居眼鏡 - 白竹屋妖具店/BOOTH支店 - BOOTH

--- a/VRChat/98/928598.html
+++ b/VRChat/98/928598.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "I2YcNIvu5VkUVLomMTdwMJmZlrPNTUNfrWA3lF/TVsU="></script>
+    "LIrMN/Ha8vyDijIh9K1FazkAdEOeZ2bvljt3lXejofg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"３Dモデル：鳥居眼鏡","description":"この商品はVRchat向けのアクセサリとして作成した3Dモデルです。\nおばあちゃんの老眼鏡のように、小さく鼻に乗せるように配置するとベストかと思います。\n\n\n【利用規約】\nこちらのモデルは商用・改変・成人向けなどの様々なコンテンツで使用することができます。\n本商品に含まれるデータを元にして、3Dモデルあるいは画像自体に商品性が依存するもの（例：素材集など）を製造、販売することはできません。\n加工なしの二次配布は禁止させていただきます。\n\n\n【商品内容】\n下記のファイルが梱包されたzipファイルとなります。\n・FBXファイル（ポリゴン数：578）\n・Readme.txt（必ずお読みください）\n・MatCap用png画像\n\nテクスチャ、UV展開はありません。マテリアルにて色を分けています。\nunityなどで読み込んだ後、各マテリアルをご自身で編集することを推奨します。\n同梱されたPNG画像は、レンズ部分のMatCap用となります。お好みで使用してください。","url":"https://booth.pm/ja/items/928598","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/ecbe906e-dd0a-4826-9b04-0f8a857c3ac0/i/928598/13ed879e-0481-4ff4-accb-e9e821b7c989_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="I2YcNIvu5VkUVLomMTdwMJmZlrPNTUNfrWA3lF/TVsU="></script>
+    nonce="LIrMN/Ha8vyDijIh9K1FazkAdEOeZ2bvljt3lXejofg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -412,9 +412,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
