updated at: 2023-07-31 22:14, 【無料】旧デザインのブロマイド - 車軸直売所 SHAJIKU store - BOOTH

--- a/VRChat/23/923123.html
+++ b/VRChat/23/923123.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "QWIvoCDHP1RkSwYqQ86mfQAg5/upFH2DPVr3O0xWY8k="></script>
+    "AhwtmJDhXG+PwNJx+532EQtWBrI1C+o9LStarbDpkf8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料】旧デザインのブロマイド","description":"初代デザインの車軸制作所ブロマイド！\n現デザインより頭身が低くて幼児体形なんだよ。\n内容はサムネイルと同一の一枚のみ。","url":"https://booth.pm/ja/items/923123","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/073f790d-621e-4ecf-a85e-04aa2017a614/i/923123/1ea63b3c-b0b7-42ce-93b6-32850872a12f_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="QWIvoCDHP1RkSwYqQ86mfQAg5/upFH2DPVr3O0xWY8k="></script>
+    nonce="AhwtmJDhXG+PwNJx+532EQtWBrI1C+o9LStarbDpkf8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -344,9 +344,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
