updated at: 2023-07-31 22:16, ナイトウォッチ - 四拾弐重工:販売所 - BOOTH

--- a/VRChat/48/914748.html
+++ b/VRChat/48/914748.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "AewrcEi3RqaoNn5KSsMKqIW+maSZzePBt3litqLDkyA="></script>
+    "/D7tPO2B5Pt57VXur1TeNcs6E4D0pA+uu+ub//E4qLE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ナイトウォッチ","description":"販売用3Dモデル第一弾　スーツ姿の女性サイボーグ\n「量産型汎用義体壱号機 \"NightWatch\"」です。\nVRCアバターとかゲームとかに使ってあげてください。\n\nこのモデルは以下の用途において自由に利用することが出来ます\n・ゲーム制作\n・VRchat用アバターあるいはワールド\n・映像制作\n・Vtuber\n(上記以外の用途での利用については一度ご連絡ください)\n\n以下の行為は許可します\n・モデルの改造\n・商用利用\n・R18(G)コンテンツでの利用\n\n\n以下の行為は禁止します\n・ゲームや映像作品を通さないこのモデルの二次配布\n・特定個人や団体への中傷を目的とした利用\n・アバターペデスタルによる配布(本モデルのパーツを流用したものを含む)\n\n\n以下の行為は必須ではありませんが、やってくれるとありがたいです\n・クレジット表記\n・動画, ゲーム等のコンテンツ制作時の使用報告\n\n\n質問や何かしら問題がありましたら、Twitter等にお問い合わせください\n(@yosohuta)","url":"https://booth.pm/ja/items/914748","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/9e316222-2e53-4586-9471-58ac96f0baec/i/914748/b1fa86c4-2bf3-4f78-8c7c-fd29a1d6c2b4_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="AewrcEi3RqaoNn5KSsMKqIW+maSZzePBt3litqLDkyA="></script>
+    nonce="/D7tPO2B5Pt57VXur1TeNcs6E4D0pA+uu+ub//E4qLE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -444,9 +444,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
